pkg/lang/syntax/testdata/ub/validate/invalid/factory/configurations-meta-alias.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: greeter.say {
      @configurations: { greet: greet.formal }
    }
  }
}
